# Alphabot2

./: README.md
ab2_description/: CMakeLists.txt  README.md  package.xml
ab2_description/launch/: robot.launch.py
ab2_description/meshes/dae/: wheel.dae
ab2_description/meshes/glb/: battery-holder.glb  m2-screw.glb  platform.glb  rpi-connector.glb  rpi-spacer.glb  wheel.glb
ab2_description/meshes/glg/: battery.glb  caster.glb  distance-sensor.glb  four-pins-connector.glb  m3-screw.glb  plate-spacer.glb  rpi.glb  top-plate.glb
ab2_description/meshes/stl/: H.stl  battery-holder.stl  battery.stl  caster.stl  distance-sensor.stl  four-pins-connector.stl  m2-screw.stl  motor.stl  plate-spacer.stl  rpi-spacer.stl  ten-pins-connector.stl  top-plate.stl
ab2_description/meshes/usd/: alphabot2.usd
ab2_description/meshes/usd/configuration/: alphabot2_physics.usd
ab2_description/resources/: README.md
ab2_description/rviz/: config.rviz
ab2_description/urdf/: ab2.urdf
ab2_gazebo/: CMakeLists.txt  README.md  package.xml
ab2_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_ab2.launch.py
ab2_gazebo/models/ab2/: model.config  model.sdf
ab2_gazebo/models/ab2_description/meshes/glb/: bottom-plate.glb  caster.glb  motor.glb  plate-spacer.glb  six-pins-connector.glb  ten-pins-connector.glb
ab2_gazebo/models/ab2_description/meshes/stl/: bottom-plate.stl  m3-screw.stl  plate-spacer.stl  platform.stl  rpi-connector.stl  six-pins-connector.stl  wheel.stl
ab2_gazebo/models/ab2_description/meshes/usd/configuration/: alphabot2_sensor.usd
ab2_gazebo/params/: ab2_bridge.yaml  gz.config
ab2_gazebo/rviz/: ab2_gazebo.rviz
ab2_gazebo/urdf/: ab2.urdf
ab2_gazebo/worlds/: empty_world.world
