<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ab2_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the Waveshare AlphaBot2 robot for simulation and visualization
  </description>
  <maintainer email="rocher.gerald@gmx.fr">Gerald Rocher</maintainer>
  <license>Apache 2.0</license>
  <author email="rocher.gerald@gmx.fr">Gerald Rocher</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
