<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ab2_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for the AlphaBot2 platform
  </description>
  <maintainer email="grocher72@gmail.com">Gerald Rocher</maintainer>
  <license>Apache 2.0</license>
  <author email="grocher72@gmail.com">Gerald Rocher</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
